# HDHRImporter

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/dbiapps/hdhr/hdhrimporter/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hdhomerun_channelscan.c  hdhr_jni_interface.c
app/src/main/java/com/dbiapps/hdhr/hdhrimporter/: MainActivity.java  MainFragment.java  SampleJobService.java
app/src/main/java/com/dbiapps/hdhr/hdhrimporter/guideconversion/: ChannelJsonToObject.java  EpgJsonToObjects.java  JsonHdhrTvParser.java  ProgramJsonToObject.java
app/src/main/java/com/dbiapps/hdhr/hdhrimporter/player/: DashRendererBuilder.java  DemoPlayer.java  ExtractorRendererBuilder.java  FakeTrickplayRunnable.java  HlsRendererBuilder.java  MpegRendererBuilder.java  RendererBuilderFactory.java  SmoothStreamingRendererBuilder.java  SmoothStreamingTestMediaDrmCallback.java  WidevineTestMediaDrmCallback.java
app/src/main/java/com/dbiapps/hdhr/hdhrimporter/recording/: HdhrAbstractionLayer.java  HdhrRecordingSession.java  HdhrRecordingSessionWorker.java  HdhrStorageManager.java
app/src/main/java/com/dbiapps/hdhr/hdhrimporter/rich/: RichAppLinkDetailsActivity.java  RichAppLinkDetailsFragment.java  RichAppLinkSidePanelActivity.java  RichBootReceiver.java  (+5 more)
app/src/main/res/layout/: main.xml  main_fragment.xml  rich_app_link_details_fragment.xml  rich_setup.xml
app/src/main/res/raw/: sampleepg.json
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: richtvinputservice.xml
(+2 files in other folders)
